add custom user agent for http requests